/*corat
 *29.09.2020
 *16:59
 *KaffeeMaschine
 */

package kaffeemaschine;

public interface IAuswahl {

    public int programmAuswahl();
}
