@startuml

title __KAFFEEMASCHINE's Class Diagram__\n

  namespace kaffeemaschine {
    abstract class kaffeemaschine.AbstractBehaelter {
        + bezeichner : String
        ~ fuellstand : double
        ~ maxFuellMenge : double
        + AbstractBehaelter()
        {abstract} + toString()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.AbfallBehaelter {
        + BehaelterAbfall()
        + toString()
        + wartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.BehaelterKaffee {
        + BehaelterKaffee()
        + toString()
        + wartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.BehaelterKakao {
        + BehaelterKakao()
        + toString()
        + wartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.BehaelterMilch {
        + BehaelterMilch()
        + toString()
        + wartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.BehaelterWasser {
        + BehaelterWasser()
        + toString()
        + wartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.BehaelterZucker {
        + BehaelterZucker()
        + toString()
        + wartung()
    }
  }
  

  namespace kaffeemaschine {
    interface kaffeemaschine.IAuswahl {
        {abstract} + programmAuswahl()
    }
  }
  

  namespace kaffeemaschine {
    interface kaffeemaschine.IWartbar {
        {abstract} + wartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Kaffeemaschine {
        ~ PROGRAMM_ABBRUCH : int
        ~ WARTUNG : int
        {static} ~ betriebsbereit : boolean
        ~ kaffeemaschinen : AbstractBehaelter[]
        + Kaffeemaschine()
        + getraenkZuebereiten()
        + programmAbbruch()
        + wartungInitiieren()
        + zutatenEntnahme()
        - getraenkAusgeben()
        - pruefeFuellstand()
        - wartenAufWartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Menu {
        ~ sc : Scanner
        + Menu()
        + programmAuswahl()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Rezept {
        {static} + AuswahlProdukt : String[]
        {static} + getZutatenVerbrauch : double[][]
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.StarteKaffeeMaschine {
        {static} + main()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.ZutatenBehaelter {
        + ZutatenBehaelter()
        + toString()
        + wartung()
    }
  }
  

  kaffeemaschine.AbstractBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.AbfallBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.AbfallBehaelter -up-|> kaffeemaschine.AbstractBehaelter
  kaffeemaschine.BehaelterKaffee .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.BehaelterKaffee -up-|> kaffeemaschine.ZutatenBehaelter
  kaffeemaschine.BehaelterKakao .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.BehaelterKakao -up-|> kaffeemaschine.ZutatenBehaelter
  kaffeemaschine.BehaelterMilch .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.BehaelterMilch -up-|> kaffeemaschine.ZutatenBehaelter
  kaffeemaschine.BehaelterWasser .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.BehaelterWasser -up-|> kaffeemaschine.ZutatenBehaelter
  kaffeemaschine.BehaelterZucker .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.BehaelterZucker -up-|> kaffeemaschine.ZutatenBehaelter
  kaffeemaschine.Menu .up.|> kaffeemaschine.IAuswahl
  kaffeemaschine.ZutatenBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.ZutatenBehaelter -up-|> kaffeemaschine.AbstractBehaelter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
